todo: button, hyperlink and responsive mode for image and container

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <form>
                         <input id="user" placeholder="Usuario">
                         <input id="password" placeholder="Contraseña">
-                        <div class="login_message_box">
-                            <p><span class="login_recuerda_text">¡Recuerda!</span> Enviamos tu usuario
+                        <div class="login-message-box">
+                            <p class="login-message-text"><span class="login-recuerda-text">¡Recuerda!</span> Enviamos tu usuario
                             y contraseña a tu correo cuando inscribiste a tu hijo o hija.</p>
                         </div>
-                        <button type="button">Ingresar</button>
-                        <a href="https://www.google.com.pe">¿Olvidaste tu contraseña?</a>
+                        <button class="login-button" type="button">Ingresar</button>
+                        <a class="forgot-password" href="https://www.google.com.pe">¿Olvidaste tu contraseña?</a>
                     </form>
                 </div>
             </main>
